<resources>
    <string name="app_name">Ghasla</string>

    <!-- Dialog -->
    <string name="dialog_titleWhoops">Whoops</string>
    <string name="dialog_buttonOk">OK</string>
    <string name="dialog_buttonGotIt">Got it!</string>
    <string name="dialog_buttonCancel">Cancel</string>
    <string name="dialog_buttonDelete">Delete</string>
    <string name="dialog_buttonLogout">Logout</string>
    <string name="dialog_buttonStay">Stay</string>
    <string name="dialog_buttonLeave">Leave</string>
    <string name="dialog_buttonUpdate">Update</string>
    <string name="dialog_buttonLater">Later</string>

    <!-- Button -->
    <string name="button_login">Login</string>
    <string name="button_signUp">Sign up</string>
    <string name="button_otherSignUp">Other sign up options</string>
    <string name="button_resetPassword">Reset password</string>
    <string name="button_register">Register</string>
    <string name="button_save">Save</string>
    <string name="button_saveChanges">Save Changes</string>
    <string name="button_next">Next</string>
    <string name="button_continue">Continue</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_start_on_boarding">Take it for a spin</string>
    <string name="button_skip">Skip</string>

    <!-- On Boarding -->
    <string name="on_boarding_first_title">Book your order from anywhere</string>
    <string name="on_boarding_second_title">Get your car washed at your desired location</string>
    <string name="on_boarding_third_title">Enjoy a clean car!</string>

    <!-- Sign in -->
    <string name="sign_in_screen_welcome">Welcome!</string>
    <string name="sign_in_screen_description">Wee will send you a verification code on your phone number.</string>
    <string name="sign_in_screen_phone_number">Phone number</string>
    <string name="sign_in_screen_verify">Verify</string>

    <!-- Verify -->
    <string name="verify_screen_title">Verify your number</string>
    <string name="verify_screen_description">Wee sent you a 4-digit code to verify your number.</string>
    <string name="verify_screen_secure_code">Secure code</string>
    <string name="verify_screen_code_hint">----</string>
    <string name="verify_screen_code_do_not_receive_code">Didn’t receive the code? Resend</string>
    <string name="verify_screen_code_do_not_receive_code_resend">Resend</string>

    <!-- Create profile -->
    <string name="create_profile_screen_title">Create profile</string>
    <string name="create_profile_screen_description">Please complete your information.</string>
    <string name="create_profile_screen_first_name">First Name</string>
    <string name="create_profile_screen_last_name">Last Name</string>

    <!-- Coupons -->
    <string name="coupons_screen_empty_state">Sorry, you don’t have active coupons yet.</string>
    <string name="coupons_screen_discount">Discount</string>
    <string name="coupons_screen_apply">Apply</string>

    <!-- Home screen -->
    <string name="home_screen_title">Let’s wash your car.</string>
    <string name="home_screen_make_a_booking">Make a Booking</string>

    <!-- Select car screen -->
    <string name="select_location_screen_select_car">Select car</string>

    <!-- Select car screen -->
    <string name="select_car_screen_select_car">Select car</string>
    <string name="select_carr_screen_add_new_car">Add a new car</string>

    <!-- Select package screen -->
    <string name="select_package_screen_select_package">Select your package</string>

    <!-- Bottom Navigation -->
    <string name="bottomNavigation_item_home">Home</string>
    <string name="bottomNavigation_item_orders">Orders</string>
    <string name="bottomNavigation_item_coupons">Coupons</string>
    <string name="bottomNavigation_item_qrcode">QRcode</string>
</resources>