<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <!-- Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_sign_in"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Guideline: Start -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <!-- Guideline: End -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/verify_screen_title"
            android:textColor="@color/blackPrimary"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verify_screen_description"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verify_screen_secure_code"
            android:textColor="@color/grayOpacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/pinView"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <!-- Otp pin -->
        <com.chaos.view.PinView
            android:id="@+id/pinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/verify_screen_code_hint"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/blackPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cursorColor="@color/blackPrimary"
            app:cursorWidth="2dp"
            app:hideLineWhenFilled="false"
            app:itemCount="4"
            app:itemHeight="64dp"
            app:itemRadius="4dp"
            app:itemSpacing="8dp"
            app:itemWidth="64dp"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
            app:lineColor="@color/divider_background"
            app:lineWidth="1dp"
            app:viewType="rectangle" />

        <!-- Next -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            style="@style/ButtonBlue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/sign_in_screen_verify"
            app:layout_constraintBottom_toTopOf="@+id/tvDoNotReceiveCode"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/pinView"
            app:layout_goneMarginBottom="56dp" />

        <TextView
            android:id="@+id/tvDoNotReceiveCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="21dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/verify_screen_description"
            android:textAlignment="center"
            android:textColor="@color/grayDark"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>