<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">


    <!-- Logo -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_sign_in"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Guideline: Start -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <!-- Guideline: End -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <!-- Title -->
        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in_screen_welcome"
            android:textColor="@color/blackPrimary"
            android:textSize="28sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintEnd_toEndOf="@+id/glEnd" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in_screen_description"
            android:textColor="@color/blackPrimary"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintEnd_toEndOf="@+id/glEnd" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/sign_in_screen_phone_number"
            android:textColor="@color/grayOpacity"
            android:textSize="14sp"
            android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintEnd_toEndOf="@+id/glEnd" />

        <!-- Email -->
        <include
            android:id="@+id/vEmail"
            layout="@layout/view_input_phone_field_base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />

        <!-- Next -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerify"
            style="@style/ButtonBlue"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:enabled="true"
            android:text="@string/sign_in_screen_verify"
            android:layout_marginBottom="16dp"
            app:layout_goneMarginBottom="56dp"
            app:layout_constraintTop_toBottomOf="@+id/vEmail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/glEnd"
            app:layout_constraintStart_toStartOf="@+id/glStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>